# flul-test

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  justfile
.claude/agent-memory/cpp-architect/: MEMORY.md
.claude/agent-memory/cpp-architect-design/: MEMORY.md
.claude/agent-memory/cpp-architect-overview/: MEMORY.md
.claude/agent-memory/cpp-implementer/: MEMORY.md
.claude/agent-memory/feature-adversarial-tester/: MEMORY.md
.claude/agent-memory/requirements-writer/: MEMORY.md
.claude/agents/: cpp-architect-design.md  cpp-architect.md  cpp-implementer.md  feature-adversarial-tester.md  requirements-writer.md
cmake/: CompilerWarnings.cmake  Coverage.cmake  FlulTest.cmake  FlulTestDiscovery.cmake
doc/: architecture-overview.puml  assrt-design.md  expect-design.md  known-issues.md  rand-design.md  requirements.md  resolved-issues.md  run-design.md  runner-design.md  skip-design.md  suite-design.md  tag-design.md  tmo-design.md  xfail-design.md
include/flul/test/: assertion_error.hpp  expect.hpp  expect_callable.hpp  registry.hpp  run.hpp  runner.hpp  stringify.hpp  suite.hpp  test_entry.hpp  test_metadata.hpp  test_result.hpp
scripts/: clang-tidy.sh  coverage.sh
test/: assertion_error_test.cpp  expect_callable_test.cpp  expect_test.cpp  fixture_test.cpp  registry_test.cpp  run_test.cpp  runner_test.cpp  self_test.cpp  stringify_test.cpp  tag_adversarial_test.cpp  tag_dedup_test.cpp  tag_metadata_adversarial_test.cpp  tag_test.cpp
